1、搭建首页布局

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,12 @@
 @import './normalize.scss';
+@import './elementui.scss';
 
 $theme-color : aqua;
+
+
+/*首页*/
+$header-height: 75px;
+$nav-width : 250px;
 
 
 // body{
